# git-integration

./: .gitignore  DONE_20231019_linux.txt  README.md  crowdgit-cron  crowdgit-server  dockerfile  get_bad_commits.py  install.sh  pyproject.toml  setup.py
crowdgit/: __init__.py  activity.py  activitymap.py  errors.py  get_bad_commits.py  get_remotes.py  ingest.py  ingress.py  logger.py  maintainers.py  repo.py  server.py
crowdgit/cm_maintainers_data/: bedrock.py  cm_database.py  enums.py  evaluate_maintainers.py  main.py  models.py  normalise_roles.py  process_maintainers.py  scraper.py
infrastructure/: get_remotes.py  logger.py  sqs.py
test/: test_extract_activities.py  test_prepare_crowd_activities.py  test_repo.py
